# infinitechess.org

./: .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  COPYING.md  Culmination.ts  DEPENDENCY_SECURITY_HANDOFF.md  Dockerfile  README.md  SETUP.md  WEBSOCKET_ANALYSIS_REPORT.md  WEBSOCKET_SUMMARY.md  add-return-types.ts  build.js  build.mjs  ecosystem.config.cjs  ecosystem.config.js  eslint.config.js  ext.html  jsconfig.json  nodemon.json  optimize-images.js  optimize-images.ts  package-lock.json  package.json  readme.md  server.js  setup.md  tsconfig.json  tsconfig.server-shared.json  vitest.config.ts  wsserver.js
.github/: copilot-instructions.md  pull_request_template.md
.idx/: dev.nix
Utility/: lockFile.js
app/: app.js
config/: certOptions.js  config.js  eloOptions.js  env.js  generateCert.js  setupDev.js
controllers/: authController.js  createaccountController.js  logoutController.js  memberController.js  members.js  refreshTokenController.js  roles.js  sendMail.js  verifyAccountController.js
dev-utils/: ICNValidator.html  ICNValidator.md  ICN_METADATA_TRANSLATIONS.md  SKELETON.css  SKELETON.html  live-game-persistence.md  organize-imports.ts  readme.md
docs/: COMPONENT_TRANSLATIONS.md  CONTRIBUTING.md  COPYING.md  DEPENDENCY-CHANGES.md  DEPENDENCY_SECURITY.md  DEPLOYMENT.md  GRAPHICS.md  (+8 more)
src/client/scripts/esm/game/chess/engines/hydrochess-wasm/: Cargo.toml  LICENSE_MIT  js_bridge.js
src/client/scripts/esm/game/chess/engines/hydrochess-wasm/src/: engine.rs  evaluation.rs  js_bridge.rs  lib.rs  tt.rs
(+2051 files in other folders)
