[package]
name = "hydrochess-wasm"
version = "0.1.0"
authors = ["FirePlank <44502537+FirePlank@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
web-sys = { version = "0.3", features = ["console", "Window"] }
serde_json = "1.0.140"
once_cell = "1.18.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Optimize for speed and small code size
opt-level = 3
lto = true
codegen-units = 1
